--- a/sz/index.html
+++ b/sz/index.html
@@ -6,6 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title></title>
 
+    <link rel="icon" href="../main.ico" type="image/x-icon">
 <link rel="stylesheet" href="css/demo.css">
 
 </head>
