--- a/a.html
+++ b/a.html
@@ -1,1 +1,6 @@
-<p><font color="red" size="6">cj对你说了一句wdnmd</font></p>
+<head>
+<style> 
+      body{text-align:center} 
+</style></head> <body>
+<p><font color="blue" size="6">cj对你说了一句wdnmd</font></p>
+</body>
