--- a/a.html
+++ b/a.html
@@ -1,6 +1,8 @@
 <head>
 <style> 
       body{text-align:center} 
-</style></head> <body>
-<p><font color="blue" size="6">cj对你说了一句wdnmd</font></p>
+</style>
+</head>
+<body></br></br></br></br></br></br></br></br
+<p><font color="blue" size="6" face="times">cj对你说了一句wdnmd</font></p>
 </body>
