--- a/a.html
+++ b/a.html
@@ -1,8 +1,12 @@
 <head>
 <style> 
       body{text-align:center} 
+ @font-face {
+   font-family :  'MyNewFont' ;    /*字体名称*/
+   src :  url ( 'font.ttf' );        /*字体源文件*/
+}
 </style>
 </head>
 <body></br></br></br></br></br></br></br></br
-<p><font color="blue" size="6" face="times">cj对你说了一句wdnmd</font></p>
+<p><font color="blue" size="6" face="MyNewFont">cj对你说了一句wdnmd</font></p>
 </body>
