--- a/a.html
+++ b/a.html
@@ -8,5 +8,5 @@
 </style>
 </head>
 <body></br></br></br></br></br></br></br></br
-<p><font color="blue" size="6" face="MyNewFont">cj对你说了一句wdnmd</font></p>
+<p><font color="blue" size="6" font-family :"MyNewFont">cj对你说了一句wdnmd</font></p>
 </body>
