--- a/a.html
+++ b/a.html
@@ -1,12 +1,9 @@
 <head>
 <style> 
       body{text-align:center} 
- @font-face {
-   font-family :  'MyNewFont' ;    /*字体名称*/
-   src :  url ( 'font.ttf' );        /*字体源文件*/
-}
+ #f2{font-family:"迷你简行楷"; font-size:120px; color:#cd2586; src:url('font.ttf') format('opentype');}
 </style>
 </head>
 <body></br></br></br></br></br></br></br></br
-<p><font color="blue" size="6" font-family :"MyNewFont">cj对你说了一句wdnmd</font></p>
+<p><font color="blue" size="6" id="f2">cj对你说了一句wdnmd</font></p>
 </body>
