--- a/a.html
+++ b/a.html
@@ -1,9 +1,9 @@
 <head>
 <style> 
       body{text-align:center} 
- #f2{font-family:"迷你简行楷"; font-size:120px; color:#cd2586; src:url('font.ttf') format('opentype');}
+ #f2{font-size:6; color:#cd2586; src:url('font.ttf') format('opentype');}
 </style>
 </head>
 <body></br></br></br></br></br></br></br></br
-<p><font color="blue" size="6" id="f2">cj对你说了一句wdnmd</font></p>
+<p><font id="f2">cj对你说了一句wdnmd</font></p>
 </body>
