--- a/a.html
+++ b/a.html
@@ -1,7 +1,7 @@
 <head>
 <style> 
       body{text-align:center} 
- #f2{font-size:6; color:#cd2586; src:url('font.ttf') format('opentype');}
+ #f2{font-size:6; color:#00ff00; src:url('font.ttf') format('opentype');}
 </style>
 </head>
 <body></br></br></br></br></br></br></br></br
