--- a/a.html
+++ b/a.html
@@ -1,9 +1,14 @@
 <head>
 <style> 
-      body{text-align:center} 
- #f2{ color:#00ff00; src:url('font.ttf') format('opentype');}
+ @font-face{
+    font-family: 'myfont'; //字体名称
+    src: url('font.ttf');		//字体文件地址
+}
+      body{
+    font-family: "myfont";
+}
 </style>
 </head>
 <body></br></br></br></br></br></br></br></br
-<p><font size="6" id="f2">cj对你说了一句wdnmd</font></p>
+<p><font size="6" color=#00ff00>cj对你说了一句wdnmd</font></p>
 </body>
