--- a/a.html
+++ b/a.html
@@ -1,14 +1,15 @@
 <head>
 <style> 
  @font-face{
-    font-family: 'myfont'; //字体名称
-    src: url('font.ttf');		//字体文件地址
-}
+ font-family:mf;
+  src:url("font.ttf") format("TrueType");
+ }
       body{
-    font-family: "myfont";
+    font-family: mf;
+       text-align:center
 }
 </style>
 </head>
 <body></br></br></br></br></br></br></br></br
-<p><font size="6" color=#00ff00>cj对你说了一句wdnmd</font></p>
+<p><font size="6" color=#00ff00 font-face=>cj对你说了一句wdnmd</font></p>
 </body>
