--- a/a.html
+++ b/a.html
@@ -5,11 +5,11 @@
   src:url("font.ttf") format("TrueType");
  }
       body{
-    font-family: mf;
+    font-family: 方正艺黑简体;
        text-align:center
 }
 </style>
 </head>
 <body></br></br></br></br></br></br></br></br
-<p><font size="6" color=#00ff00 font-face=>cj对你说了一句wdnmd</font></p>
+<p><font size="6" color=#00ff00 >cj对你说了一句wdnmd</font></p>
 </body>
