--- a/a.html
+++ b/a.html
@@ -9,6 +9,7 @@
        text-align:center
 }
 </style>
+ <link rel="icon" href="main.ico" type="image/x-icon">
 </head>
 <body></br></br></br></br></br></br></br></br
 <p><font size="6" color=#00ff00 >cj对你说了一句wdnmd</font></p>
